Update env file and readme

--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ PORT=3001 # Testing purpose
 # DB Related
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=password
+# DB_PASSWORD=password (window)
+DB_PASSWORD=Mysql@1234 # (mac)
 DB_DATABASE=vuetest
 DB_PORT=3306
